<resources>
    <string name="app_name">Флэш-карточки</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Флэш-карточки</string>
    <string name="nav_header_subtitle">бета-версия</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>
    <string name="menu_home">Главная</string>
    <string name="menu_decks">Колоды</string>
    <string name="menu_slideshow">Слайдшоу</string>
    <string name="home_btn_cards_text">Добавить карточку</string>
    <string name="home_btn_add_deck">Добавить колоду</string>
    <string name="menu_cards">Карточки</string>
    <string name="create_card_tv_word">Введите термин или вопрос.</string>
    <string name="btn_add">Добавить</string>
    <string name="btn_edit">Изменить</string>
    <string name="btn_cancel">Отмена</string>
    <string name="create_card_et_word_hint"></string>
    <string name="create_card_et_value_hint"></string>
    <string name="attention">Внимание!</string>
    <string name="msgErrorCreateCard">Поля должны быть заполнены.</string>
    <string name="accept">Принято</string>
    <string name="addCardSuccess">Карточка успешно добавлена!</string>
    <string name="addDeckSuccess">Колода успешно добавлена!</string>
    <string name="editCardSuccess">Карточка успешно обновлена!</string>
    <string name="slideshow_btn">Показать значение</string>
    <string name="fragment_create_deck_et_hint">Введите название колоды:</string>
    <string name="item_card_delete_card">Удалить карточку</string>
    <string name="menu_card">Карточка</string>
    <string name="deck_content">Содержимое колоды</string>
    <string name="home_btn_train_words_label">Тренировка слов</string>
    <string name="train_deck_button">Тренировать колоду</string>
    <string name="logo">logo</string>
    <string name="main_menu_exit">Выход</string>
    <string name="fragment_deck_btn_send_name">Поделиться</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_deck">Выберите колоду:</string>
    <string name="value_or_answer">Значение или ответ:</string>
    <string name="word_or_question">Слово, термин или вопрос:</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="menu_user_page">Пользователь</string>

</resources>