<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.flashcards.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_decks"
        android:name="com.example.flashcards.ui.decks.DecksFragment"
        android:label="@string/menu_decks"
        tools:layout="@layout/fragment_decks" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.flashcards.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_cards"
        android:name="com.example.flashcards.ui.cards.CardsListFragment"
        android:label="@string/menu_cards"
        tools:layout="@layout/fragment_card_list" >
    </fragment>
</navigation>