<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_page"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_decks"
            android:icon="@drawable/decks_icon"
            android:title="@string/menu_decks" />

        <item
            android:id="@+id/nav_cards"
            android:icon="@drawable/cards_icon"
            android:title="@string/menu_cards" />

        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/fui_ic_anonymous_white_24dp"
            android:title="@string/user_page_name" />

    </group>
</menu>