<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#044D60"
    tools:context=".ui.decks.CreateDeckDialog">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/create_deck_tv_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fragment_create_deck_et_hint"
            android:textAlignment="center"
            android:background="#038E79"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/create_deck_et_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#DACECE"
            android:textColorHint="#B5AFAF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_deck_tv_label" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"

            android:textSize="@dimen/fui_field_padding_vert"
            android:backgroundTint="#047787"
            android:text="@string/btn_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btnCancel"
            app:layout_constraintTop_toBottomOf="@id/create_deck_et_name" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#047787"
            android:layout_marginBottom="10dp"
            android:textSize="@dimen/fui_field_padding_vert"
            android:text="@string/btn_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btnAdd"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_deck_et_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>